fix: increase dialog max height and width, removed gap between hint and buttons in dialog footer

--- a/src/Dialog/Dialog.scss
+++ b/src/Dialog/Dialog.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin: auto;
   max-width: 736px;
-  max-height: calc(100% - 24px * 2);
+  max-height: 100%;
   background: #f7f7f7;
   border-radius: 20px;
 
@@ -23,7 +23,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    padding: 24px;
+    padding: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,7 +63,7 @@
     }
   }
 
-  > form {
+  >form {
     display: contents;
   }
 }
